scribble/scribble-assertions/src/test/resources/good/extensions/annotations/ComplexMessageFlow.scr
module good.extensions.annotations.ComplexMessageFlow;


type <java> "java.lang.integer" from "rt.jar" as int;


// Complicated Message flow
/*global protocol Prot(role S, role B, role C, role D)
{
	ADD(x:int) from C to S;
	Add(x) from S to B; 
	
	ADD(x) from C to B;
	
	Add(y:int) from C to D; 
	
	Add(x) from B to D; 
	
	Add(y) from D to S;  
}*/
global protocol Prot(role S, role B, role C, role D)
{
	ADD(x:int) from C to S;
	Add(x1:int) from S to B;  @"x1=x"
	
	ADD(x2:int) from C to B;  @"x2=x"
	
	Add(y:int) from C to D; 
	
	Add(x3:int) from B to D;  @"x3=x1"
	
	Add(y1:int) from D to S;  @"y1=y"
}